--- a/cms/api/spot/models/spot.settings.json
+++ b/cms/api/spot/models/spot.settings.json
@@ -42,6 +42,10 @@
     },
     "referrer": {
       "type": "string"
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user"
     }
   }
 }
