--- a/cms/config/application.json
+++ b/cms/config/application.json
@@ -6,5 +6,8 @@
   "public": {
     "path": "./public",
     "maxAge": 60000
+  },
+  "sendgrid": {
+    "apikey": "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"
   }
 }
