--- a/cms/package.json
+++ b/cms/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@vladblindu/errmess": "1.0.1",
+    "graphql": "^15.1.0",
     "knex": "<0.20.0",
     "mysql": "latest",
     "strapi": "3.0.0-beta.20.3",
@@ -23,8 +25,7 @@
     "strapi-plugin-upload": "3.0.0-beta.20.3",
     "strapi-plugin-users-permissions": "3.0.0-beta.20.3",
     "strapi-provider-email-sendgrid": "^3.0.1",
-    "strapi-utils": "3.0.0-beta.20.3",
-    "util": "^0.12.3"
+    "strapi-utils": "3.0.0-beta.20.3"
   },
   "author": {
     "name": "A Strapi developer"
