--- a/cms/extensions/users-permissions/models/User.settings.json
+++ b/cms/extensions/users-permissions/models/User.settings.json
@@ -76,6 +76,17 @@
     },
     "referrer": {
       "type": "string"
+    },
+    "avatar": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
