--- a/cms/api/spot/models/spot.settings.json
+++ b/cms/api/spot/models/spot.settings.json
@@ -46,6 +46,10 @@
     "user": {
       "plugin": "users-permissions",
       "model": "user"
+    },
+    "deleted": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
