User-Spot-Broadcast

--- a/cms/api/broadcast-table/models/broadcast-table.settings.json
+++ b/cms/api/broadcast-table/models/broadcast-table.settings.json
@@ -17,6 +17,10 @@
     },
     "spot": {
       "model": "spot"
+    },
+    "deleted": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
