--- a/cms/api/spot-talent/models/spot-talent.settings.json
+++ b/cms/api/spot-talent/models/spot-talent.settings.json
@@ -25,6 +25,10 @@
     },
     "spot": {
       "model": "spot"
+    },
+    "deleted": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
