--- a/cms/api/spot-broadcast/models/spot-broadcast.settings.json
+++ b/cms/api/spot-broadcast/models/spot-broadcast.settings.json
@@ -29,6 +29,11 @@
     "deleted": {
       "type": "boolean",
       "default": false
+    },
+    "broadcaster": {
+      "columnName": "broadcaster",
+      "plugin": "users-permissions",
+      "model": "user"
     }
   }
 }
