--- a/cms/api/spot-talent/models/spot-talent.settings.json
+++ b/cms/api/spot-talent/models/spot-talent.settings.json
@@ -19,7 +19,7 @@
     "obs": {
       "type": "text"
     },
-    "user": {
+    "talent": {
       "plugin": "users-permissions",
       "model": "user"
     },
