--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "html-webpack-plugin": "^4.3.0",
     "postcss": "^7.0.30",
     "prop-types": "^15.7.2",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.4.6",
     "webpack": "^4.43.0",
