--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,9 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "classnames": "^2.2.6"
+    "react-router": "^5.2.0"
   }
 }
