--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
+    "connected-react-router": "^6.8.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "formik": "^2.1.4",
