--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,6 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
-    "connected-react-router": "^6.8.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "formik": "^2.1.4",
@@ -37,6 +36,8 @@
     "html-webpack-plugin": "^4.3.0",
     "postcss": "^7.0.30",
     "prop-types": "^15.7.2",
+    "react-datepicker": "^3.0.0",
+    "react-inlinesvg": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.4.6",
@@ -51,8 +52,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
-    "react-router": "^5.2.0"
+    "react-router": "^5.2.0",
+    "redux-actions": "^2.6.5"
   }
 }
