--- a/cms/package.json
+++ b/cms/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop",
+    "develop": "start develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "@vladblindu/eerror": "https://github.com/vladblindu/eerror",
-    "@vladblindu/errmess": "1.0.1",
+
     "knex": "<0.20.0",
     "mysql": "latest",
     "strapi": "3.0.0-beta.20.3",
