--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-datepicker": "^3.0.0",
     "react-inlinesvg": "^2.0.0",
     "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.5.1",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.4.6",
     "webpack": "^4.43.0",
@@ -60,6 +61,7 @@
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
+    "react-table": "^7.2.2",
     "redux-actions": "^2.6.5"
   }
 }
