--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-table": "^7.2.2",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "ts-react-json-table": "^0.1.2"
   }
 }
