--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
@@ -53,10 +54,12 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
+    "@babel/plugin-syntax-class-properties": "^7.10.4",
     "@vladblindu/fetch-dog": "https://github.com/vladblindu/fetch-dog",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.2",
     "react-debounce-input": "^3.2.2",
@@ -65,4 +68,5 @@
     "react-table": "^7.2.2",
     "redux-actions": "^2.6.5"
   }
+
 }
