--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.4.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
     "yup": "^0.29.1"
@@ -53,7 +53,8 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
-    "@vladblindu/fetch-dog": "https://github.com/vladblindu/fetch-dog",
+    "@vladblindu/fetch": "vladblindu/fetch-dog",
+    "@vladblindu/fetch-dog": "^1.0.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
