--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,8 +53,8 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
+    "@bitbrother/fetch-dog": "^1.0.2",
     "@vladblindu/fetch": "vladblindu/fetch-dog",
-    "@vladblindu/fetch-dog": "^1.0.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
