--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,8 @@
   },
   "dependencies": {
     "@bitbrother/fetch-dog": "^1.0.0",
-     "bootstrap": "^4.5.0",
+    "antd": "^4.5.2",
+    "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
     "react": "^16.13.1",
