--- a/cms/api/spot-talent/models/spot-talent.settings.json
+++ b/cms/api/spot-talent/models/spot-talent.settings.json
@@ -12,8 +12,8 @@
     "talent_role": {
       "type": "enumeration",
       "enum": [
-        "ACTOR",
-        "VOICE"
+        "voce",
+        "fata"
       ]
     },
     "obs": {
